--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "autoprefixer": "^9.7.4",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
+    "browserify": "^17.0.0",
     "cross-env": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-buffer": "0.0.2",
     "gulp-cache-bust": "^1.4.1",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
@@ -51,9 +57,11 @@
     "gulp-wrap": "^0.15.0",
     "node-sass": "^4.14.1",
     "require-dir": "^1.2.0",
-    "usedcss": "^1.0.7"
+    "usedcss": "^1.0.7",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1"
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "babel-runtime": "^6.26.0"
   }
 }
