--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://github.com/transformator98/Filmoteka",
+  "homepage": "https://github.com/artemdev/movies.git",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luxplanjay/gulp-starter-kit.git"
