--- a/package.json
+++ b/package.json
@@ -7,17 +7,7 @@
     "start": "cross-env PORT=1234 gulp start --development ",
     "build": "gulp build --production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "homepage": "https://github.com/artemdev/movies.git",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/luxplanjay/gulp-starter-kit.git"
-  },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/luxplanjay/gulp-starter-kit/issues"
+    "deploy": "netlify deploy -p"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
